--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ input {
   margin: 0;
   /* padding: control-vertical-padding() $backdrop-horizontal-spacing; */
   background: none;
-  border: border(transparent);
+  border-color: transparent;
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
